llvm-toolchain-13 (1:13.0.0-6) unstable; urgency=medium

  * Remove omp-device-info from LLVMExports.cmake (Closes: #996551)
  * Fix a atomic issue. Thanks to YunQiang Su for the patch
    Partial fix for #995827

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 15 Oct 2021 10:45:30 +0200

llvm-toolchain-13 (1:13.0.0-5) unstable; urgency=medium

  *  Restrict the dependency on libunwind-13-dev from Package: libc++-13-dev
     on amd64 arm64 armhf i386 mips64el ppc64el ppc64 riscv64
     (Closes: #996462)

 -- Sylvestre Ledru <sylvestre@debian.org>  Thu, 14 Oct 2021 12:33:15 +0200

llvm-toolchain-13 (1:13.0.0-4) unstable; urgency=medium

  * Instead of using llvm-* to install binaries in llvm-X.Y
    list all the binaries one by one.
    It will prevent "llvm-omp-device-info" to be installed in
    llvm-X.Y which caused an explicit dependency on libomp
    which caused llvm-X.Y to be NOT coinstallable anymore
  * Move llvm-omp-device-info-X.Y from llvm-X to libompX-dev
    Fixes upstream #52162

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 13 Oct 2021 13:29:51 +0200

llvm-toolchain-13 (1:13.0.0-3) unstable; urgency=medium

  * libc++-13-dev should depends on libunwind-13-dev
    (Closes: #995810)
  * Disable a tsan and two lldb tests on i386

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 06 Oct 2021 12:52:10 +0200

llvm-toolchain-13 (1:13.0.0-2) unstable; urgency=medium

  * Fix the libclang detection in cmake
    (Closes: #994827)
  * Adjust the testsuite after various changes
    (rpass, libclang, polly lib, etc)

 -- Sylvestre Ledru <sylvestre@debian.org>  Sun, 03 Oct 2021 22:38:18 +0200

llvm-toolchain-13 (1:13.0.0-1) unstable; urgency=medium

  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 01 Oct 2021 09:08:08 +0200

llvm-toolchain-13 (1:13.0.0~+rc4-1) unstable; urgency=medium

  * New testing release
  * Ship clang-repl
    See https://reviews.llvm.org/D106813
  * Replace make by ninja for the build process